ckanext/berlintheme/theme/assets/css/ckan_extra.css
/* ... */
.dp-button-arrow-left:after {
  -webkit-mask-image: var(--dpicon-arrow-left);
  mask-image: var(--dpicon-arrow-left);
}

.dp-button-pen:after {
  -webkit-mask-image: var(--dpicon-pen);
  mask-image: var(--dpicon-pen);
}

.dp-button-plus:after {
  -webkit-mask-image: var(--dpicon-plus);
  mask-image: var(--dpicon-plus);
}  

.dp-button-trash:after {
  -webkit-mask-image: var(--dpicon-trash);
  mask-image: var(--dpicon-trash);
}

.dp-button-key:after {
  -webkit-mask-image: var(--dpicon-key);
  mask-image: var(--dpicon-key);
}

.bicon-sitemap:before {
    -webkit-mask-image: var(--dpicon-sitemap);
    mask-image: var(--dpicon-sitemap);
}

.bicon-tags:before {
    -webkit-mask-image: var(--dpicon-tags);
    mask-image: var(--dpicon-tags);
}

.bicon-clock:before {
    -webkit-mask-image: var(--dpicon-clock);
    mask-image: var(--dpicon-clock);
}

.bicon-key:before {
    -webkit-mask-image: var(--dpicon-key);
    mask-image: var(--dpicon-key);
}

.bicon-bars:before {
    -webkit-mask-image: var(--dpicon-bars);
    mask-image: var(--dpicon-bars);
}

.bicon-edit:before {
    -webkit-mask-image: var(--dpicon-edit);
    mask-image: var(--dpicon-edit);
}

.bicon-info-circle:before {
    -webkit-mask-image: var(--dpicon-info-circle);
    mask-image: var(--dpicon-info-circle);
}

.bicon-users:before {
    -webkit-mask-image: var(--dpicon-users);
    mask-image: var(--dpicon-users);
}

.dr-visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0 0 0 0);
  white-space: nowrap;
  border: 0;
}

/* object fit */

.modul-teaser .image img {
  background-color: #f5f5f5;
  height: 100%;
}

img.cover, .activity.cover img {
  object-fit: cover;
}

img.contain, .activity.contain img {
  object-fit: contain;
}

/* Infofigures */

.modul-infofigures .infofigure .title {
  /* This should already be set. But somehow, when we're
  using infofigures in a modul-text_bild, it's not. */
  width: 100%;
}

/* Follow-Button */

.follow_button a.button--fulltone {
  /* we're using a link here, not an actual button, so the color needs to be adjusted */
  color: #ffffff;
}

.dr-center {
  display: flex;
  justify-content: center;
}

/* Content Actions */

@media print,(max-width: 73.8135rem ) {
  .dr-content-action-wrapper {
    justify-content: flex-start;
  }
}

@media print,(min-width: 73.8135rem ) {
  .dr-content-action-wrapper {
    justify-content: flex-end;
  }
}

@media print,(min-width: 73.8135rem ) {
  .dr-content-header .dr-fake-tabs {
    margin-top: -40px;
  }
}

.dr-content-action-wrapper {
  margin-bottom: 20px;
  display: flex;
}

/* Forms */

.dr-form-element {
  display: flex;
}

.dr-form-element a {
  padding-left: 15px;
}

.dr-form-element .select2-container {
  width: 100% !important;
}

.dr-input-wrapper {
  width: 100%;
}

.dr-input-wrapper .slug-preview {
  margin-top: 5px;
}

/* New dataset */

.dr-stages-wrapper {
  margin-bottom: 20px;
}

.stages li.active {
  font-weight: bold;
}  

/* Hero search */

.dr-hero-search {
  margin-top: 20px;
}

.dr-hero-search .page_primary_action {
  margin-bottom: 20px;
}

.dp-search-result-sort {
  min-width: 250px;
}

/* Dataset search page */

@media screen and (max-width: 37.5rem) {
  .fullwidth.panel--heavy {
    margin-left: -12px;
    margin-right: -12px;
    width: auto !important;
    max-width: 100vw !important;
  }
}

@media print, (min-width: 73.8135rem) {
  .fullwidth.panel--heavy {
    position: relative;
    z-index: 0;
    left: 50%;
    right: auto;
    width: 100vw;
    margin-left: -50vw;
    margin-right: auto;
    overflow: hidden;
  }

  .fullwidth>.fullwidth__inner:not(.keep-fullwidth) {
    width: 980px;
    max-width: 100%;
    margin: 0 auto;
  }
}

.js .js-hide {
    display: none;
}

.show-filters.btn, .hide-filters {
    display: none;
}

#dataset-search-form .searchterm, #organization-search-form .searchterm, #group-search-form .searchterm {
    margin-bottom: 50px;
}

.dp-search-result-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.dp-search-result-summary {
    font-size: 16px;
    line-height: 24px;
    font-family: Arial, sans-serif;
    color: rgb(0, 0, 0);
    font-weight: 700;
    flex-grow: 1;
}

.dr-facet-head-container {
  display: flex;
  align-items: center;
}

.facet a.qmark-icon {
  margin-left: 10px;
}

/* Dataset Page */

.textbildbreit .dataset img {
  max-height: 450px;
}

.dp-undefined {
  font-style: italic;
}

.follow_button i {
  display: none;
}

/* Dataset cards */

.dp-dataset-metadatum {
    margin-block-start: 1em;
    margin-block-end: 1em;
  }
  
  .dp-dataset-metadatum__row {
    display: flex;
    column-gap: 10px;
  }
  
  .dp-dataset-metadatum__header {
    font-size: 11px;
    color: #454545;
    margin-bottom: 6px;
  }
  
  .dp-dataset-metadatum__body {
    font-size: 14px;
  }
  
  .dp-resource-header {
    display: flex;
    justify-content: space-between;
  }
  
  .dp-resource-icon-list {
    display: flex;
    flex-wrap: wrap;
    column-gap: 8px;
    row-gap: 10px;
  }
  
  .dp-resource-icon-mini {
    height: 23px;
    background-color: #DDDDDD;
    border-top: solid 4px;
    height: 19px;
    padding: 0px 5px 0px 5px;
    display: flex;
    align-items: center;
  }
  
  .dp-resource-icon-label {
    color: #454545;
    font-family: "Courier New";
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0.3px;
  }
  
  .dp-resource-icon-mini.dp-resource-tabular {
    border-top-color: #96B223; /* lime 500 */
  }
  .dp-resource-icon-mini.dp-resource-gis {
    border-top-color: #0396B7; /* cyan 600 */
  }
  .dp-resource-icon-mini.dp-resource-textual {
    border-top-color: #F61C35; /* red 500 */
  }
  .dp-resource-icon-mini.dp-resource-website {
    border-top-color: #FCC832; /* amber 400 */
  }
  .dp-resource-icon-mini.dp-resource-feed {
    border-top-color: #EC7AA0; /* fuchsia 400 */
  }
/* ... */

